# mega

./: .gitignore  README.md  badlinks.json  main.py  pyproject.toml  requirements.txt  setup.sh  toxic.py  utils.py  web.py
cogs/: nsfw.py  phishing.py  toxic.py
