[tool.poetry]
name = "Mega"
version = "1.0"
description = "Incorporating machine learning to make life easier"
authors = ["John-Paul Krowicki <johnpaulbin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^2.2.5"
scikit-learn = "^1.0.1"
python-dotenv = "^0.19.2"
tldextract = "^3.1.2"
NudeNet = "^2.0.9"
phish-detector = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
